[package]
name = "rustyact"
version = "0.1.6"
edition = "2024"
rust-version = "1.87.0"
description = "Feature-rich react app creator"
documentation = "https://github.com/farzadmohtasham/rustyact"
homepage = "https://github.com/farzadmohtasham/rustyact"
license = "MIT"
readme = "README.md"
repository = "https://github.com/farzadmohtasham/rustyact"

[workspace.metadata.release]
# optional: customize how versions are bumped:
# minor_pattern = "^feat"
# patch_pattern = "^(fix|perf)"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.38"
config = "0.15.11"
console = "0.15.11"
dialoguer = "0.11.0"
flate2 = "1.1.1"
glob = "0.3.2"
handlebars = "6.3.2"
indicatif = "0.17.11"
libloading = "0.8.7"
log = "0.4.27"
notify = "8.0.0"
reqwest = "0.12.15"
serde = "1.0.219"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = "1.45.0"
toml = "0.8.22"
tracing = "0.1.41"
walkdir = "2.5.0"
zip = "3.0.0"
